k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quantroi
  labels:
    name: quantroi
    environment: production
